# cave-explorer

./: .gitignore  .nojekyll  .polyscope.ini  Dockerfile  LICENSE  README.md  about.html  abstract.html  animations.html  approach.html  imgui.ini  importance.html  index.html  introduction.html  methods.html  modified_l2_nodes.csv  networkwise.html  neuronwise.html  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css  test.html
.github/workflows/: publish.yml
data/: ctype_hues.pkl
docs/: _quarto.yml  _variables.yml  abstract.qmd  animations.qmd  approach.qmd  importance.qmd  index.qmd  introduction.qmd  introduction.tex  methods.qmd  networkwise.qmd  neuronwise.qmd  references.bib  schematic.pptx
docs/figures/figure1/: figure1.py
docs/figures/figure2/: figure2.py
docs/figures/figure_precision_recall_gallery/: figure.py
experiments/: access_time_ordered.py  access_time_ordered_cleaned.py  animate_edits.py  animate_edits_investigation.py  anno_mwe.py  changelog_mwe.py  clean_and_merge.py  cleaned_replay_scheme.py  cloudvolume.py  compute_neuronwise_sequence_metrics.py  debug_access_time_ordered.py  delta_trees.py  deltas.py  edit_graph.py  edit_graph_edge_tracking.py  edit_graph_frame.py  edit_replay_ordering.py  edits_investigation.py  examine_inhibitory_outputs.py  explain_new_node.py  extract_inhibitory_info.py  fused_gromov_wasserstein_fridays.py  gcs.py  generate_manifest.py  graph_frame_investigations.py  graph_frame_remix_edits.py  graph_frame_replay_edits.py  hello_world.py  inconsistent_l2_mwe.py  induced_subgraph.py  induced_subgraph_cheating.py  is_valid_mwe.py  l2_lineage.py  load_sequence_networks.py  load_sequences.py  load_sequences_distance_metrics.py  meta_operations.py  metaedit_graph_frame.py  mods.py  neuron_animation.py  (+36 more)
notebooks/: hello_world.ipynb  new_l2_node.ipynb  past_synapses.ipynb
paper/figure_code/: fig1.py
paper/figure_marp/: figure1.md
pkg/: setup.py  utils.py
pkg/pkg/constants/: __init__.py
pkg/pkg/edits/: changes.py  (+3 more)
sandbox/: _rfc_invariance.py  _try_coords.py  access_time_ordered.py  access_time_ordered_cleaned.py  accumulate_edits.py  axes_diagram.py  changelog_mwe.py  clean_and_merge.py  compare_short_long.py  continuation.py  debug_broken_cells.py  delta_trees.py  docs.py  edge_dropout.py  edge_dropout_optimization.py  edit_dropout_vs_features.py  edit_graph.py  edit_graph_edge_tracking.py  edit_stats_for_chi_cells.py  edit_timing.py  emily_skeletons_for_tommy.py  emily_skeletons_mwe.py  expanded_inhibitory_clustering.py  explain_new_node.py  explain_pcg_issue.py  explore_good_neuron_targets.py  extract_inhibitory_synapses.py  featurization.py  fused_gromov_wasserstein_fridays.py  gcs.py  get_subgraph.py  graph_frame_replay_edits.py  hello_world.py  hermitian_inv.py  how_many_edits.py  inconsistent_l2_mwe.py  induced_subgraph_motifs.py  investigate_weird_leaves.py  is_valid_mwe.py  javi.py  (+56 more)
sandbox/l2_ml/: clean_cell_extraction.py  examine_clean_cells.py  graph_ml.py  l2_features_on_splits_simple.py  l2_learning_on_splits.py
site_libs/bootstrap/: bootstrap.min.css
slides/: access_time_ordered.html  access_time_ordered.md
(+42 files in other folders)
