[tool.poetry]
name = "skedits"
version = "0.1.0"
description = ""
authors = ["Ben Pedigo <ben.pedigo@alleninstitute.org>"]

[tool.poetry.dependencies]
python = "3.11.*"
scikit-learn = "1.2.2"
caveclient = "^5.11.0"
graspologic = "^3.3.0"
matplotlib-venn = "^0.11.9"
urllib3 = "^1.26.17"
brotlicffi = "^1.1.0.0"
cloud-volume = "^8.27.0"
meshparty = "^1.16.14"
pcg-skel = {path = "../pcg_skel", develop = true}
skeleton-plot = {path = "../skeleton_plot", develop = true}
Jinja2 = ">=3.1.2"
nglui = "^2.14.3"
ipython = ">8.16.0"
neuropull = {path = "../neuropull", develop = true}
ipykernel = "^6.25.2"
navis = "^1.5.0"
POT = "^0.9.1"
axon-id = {path = "../axon_id", develop = true}
apical-classifier = {path = "../apical_classifier", develop = true}
task-queue = "^2.13.0"
tables = {git = "https://github.com/PyTables/PyTables"}
glasbey = "^0.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pkg = {path = "pkg", develop = true}